Revert "replace images by dot files"
This reverts commit bc67f4486a65d6c1e02f0736aefd15cdd9d0204d.

--- a/Readme.adoc
+++ b/Readme.adoc
@@ -51,10 +51,7 @@ For supported output formats please have a look into the https://graphviz.gitlab
       .addEdgeById("c", "a")
       .output(dotExecutable, targetDirectory, "simple", "pdf", "300")
 
-[plantuml]
-----
-include::docs/dot/simple.dot[]
-----
+image::docs/jpg/simple.jpg[]
 
 ==== Cycle Detection
 One of the main features of this API is the capability to detect cycles as in this example:
@@ -76,10 +73,7 @@ One of the main features of this API is the capability to detect cycles as in th
       .determineGraphRoutes
       .output(dotExecutable, targetDirectory, "cycle")
 
-[plantuml]
-----
-include::docs/dot/cycle.dot[]
-----
+image::docs/jpg/cycle.jpg[]
 
 ==== Calculating Routes and Transitive Edges
 Another important feature is the calculation of routes within the graph along with transitive edges.
@@ -130,10 +124,7 @@ the default ellipse:
       .determineGraphRoutes
       .output(dotExecutable, targetDirectory, "routes")
 
-[plantuml]
-----
-include::docs/dot/routes.dot[]
-----
+image::docs/jpg/routes.jpg[]
 
 ==== Sub Graphs
 Graphs may also be nested which is demonstrated by the following code snippet.
@@ -211,10 +202,7 @@ this is a restriction of the dot language.
       .determineGraphRoutes
       .output(dotExecutable, targetDirectory, "subgraph")
 
-[plantuml]
-----
-include::docs/dot/subgraph.dot[]
-----
+image::docs/jpg/subgraph.jpg[]
 
 ==== Nested Graphs
 It is also possible to nest graphs. Here the same rules for sub graphs apply regarding their naming as mentioned in the
@@ -254,10 +242,7 @@ previous section.
       .addGraph(cluster2)
       .output(dotExecutable, targetDirectory, "nested")
 
-[plantuml]
-----
-include::docs/dot/nested.dot[]
-----
+image::docs/jpg/nested.jpg[]
 
 === Maven DSL
 Currently the only DSL example is the Maven DSL which may be used to analyze complex
